--- a/style/style.css
+++ b/style/style.css
@@ -343,7 +343,7 @@ header{
         width: 100%;
         height: 3px;
         border: none;
-        margin: 10px 0;
+        margin: 5px 0;
         opacity: 0.5;
     }
     #hero{
@@ -388,6 +388,15 @@ header{
     }
     .story-cards-all{
         grid-template-columns: repeat(2, 1fr);
+    }
+    .date-btn{
+        font-size: x-small;
+        border-radius: 20px;
+        padding: 7px 14px;
+        background-color: #3CD8E8;
+        margin-left: 15px;
+        margin-top: -15px;
+        position: absolute;
     }
     .footer-3-parts{
         display: flex;
