--- a/style/style.css
+++ b/style/style.css
@@ -73,6 +73,11 @@ header{
     border-radius: 12px;
     border: none;
 }
+
+.burger-menu{
+    display: none;
+}
+
 #hero-heading{
     font-size: 3.5rem;
 }
@@ -346,6 +351,24 @@ header{
     .btn-primary{
         display: none;
     }
+
+
+    .burger-menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 30px;
+        height: 20px; 
+    }
+    
+    .burger-menu .line {
+        width: 100%;
+        height: 3px;
+        background-color: #333;
+        border-radius: 2px; 
+
+    }
+
     .nav-line{
         display: block;
         background-color: #FEA301;
@@ -409,7 +432,6 @@ header{
     .footer-3-parts{
         display: flex;
         flex-direction: column;
-        text-align: center;
     }
     .left-section{
         width: 100%;
@@ -422,10 +444,16 @@ header{
     }
     .logo-text{
         display: flex;
-        justify-content: center;
+        justify-content: left;
     }
     .footer-pages li:first-child {
         margin-top: 5px;
+    }
+    .middle-section{
+        text-align: left;
+    }
+    .footer-right-section{
+        text-align: left;
     }
 
 
