--- a/style/style.css
+++ b/style/style.css
@@ -18,10 +18,6 @@ header{
     width: 80%;
     margin: 0 auto;
 }
-/* main{
-    width: 80%;
-    margin: 0 auto;
-} */
 
 .flex{
     display: flex;
@@ -64,6 +60,23 @@ header{
 .nav-line{
     display: none;
 }
+
+.marquee-container {
+    background-color: #fdf6e4;
+    border: 2px solid #fea301; 
+    border-radius: 10px; 
+    padding: 10px;
+    width: 80%; 
+    margin: 20px auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+marquee {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #333;
+}
+
 .btn-primary{
     font-size: 1.25rem;
     color: white;
@@ -324,23 +337,6 @@ header{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media screen and (max-width: 768px){
     .nav-items{
         display: none;
@@ -455,14 +451,5 @@ header{
     .footer-right-section{
         text-align: left;
     }
-
-
-
-
-
-
-
-
-
 
 }
